Added text editing functionality
All buttons will update the text display with the corresponding values, except for the equals and negate button.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name = "backspace">Del</string>
     <string name ="negate">+/-</string>
 
-    <string name="textViewDefault">0</string>
+    <string name="display">Enter in a value</string>
 
     <string name="placeholder"> </string>
 </resources>
