--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name = "backspace">Del</string>
     <string name ="negate">+/-</string>
 
-    <string name="display">Enter in a value</string>
+    <string name="display">Enter a value</string>
 
     <string name="placeholder"> </string>
 
