--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,12 @@
     <string name="absoluteValueText">|x|</string>
     <string name="piText">π</string>
     <string name="eText">e</string>
+    <string name="create_account">Create Account</string>
+    <string name="cancel">Cancel</string>
+    <string name="login">Login</string>
+    <string name="attempts_left">Attempts Left:</string>
+    <string name="password">Password</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="android_calculator">Android Calculator</string>
+    <string name="back">Back</string>
 </resources>
